--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="app_name">Laetitia Calculadora de Juros Compostos</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="initial_investment_text">Investimento Inicial (R$)</string>
+    <string name="value_text">00,00</string>
+    <string name="monthly_contribution_text">Aporte Mensal (R$)</string>
+    <string name="interest_rate_text">Taxa de Juros (%)</string>
+    <string name="interest_rate_input_text">8</string>
+    <string name="period_text">Período de Tempo</string>
+    <string name="period_value_text">12</string>
+    <string name="calculate_text_button">Calcular</string>
+    <string-array name="interest_rate_spinner">
+        <item>Mês</item>
+        <item>Ano</item>
+    </string-array>
+    <string-array name="period_spinner">
+        <item>Meses</item>
+        <item>Anos</item>
+    </string-array>
 </resources>
