finish calculating compound interest without monthly contributions, remove fragments to simplify the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="period_text">Período de Tempo</string>
     <string name="period_value_text">12</string>
     <string name="calculate_text_button">Calcular</string>
-    <string name="loading_text">Carregando...</string>
+    <string name="loading_text">Carregando…</string>
     <string-array name="interest_rate_spinner">
         <item>Ao Ano</item>
         <item>Ao Mês</item>
